[lworld] Fails to compile with --with-debug-level=optimized

XMLWordPrintable

      Noticed a compilation problem with " --with-debug-level=optimized" configured, e.g:

      src/hotspot/share/oops/method.cpp:2450:7: error: 'valid_itable_index' was not declared in this scope; did you mean 'invalid_vtable_index'?
       2450 | if (valid_itable_index())
            | ^~~~~~~~~~~~~~~~~~
            | invalid_vtable_index

            Assignee:
            David Simms
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: