8256929: [lworld] Fails to compile with --with-debug-level=optimized